--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "bootstrap": "^4.5.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
